[package]
name = "linear-regression-wars"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"
rand = "0.7.3"
